syntax = "proto3";

package cr8r.controller;

import "core/assignment.proto";

message PGetAssignmentRequest {
    uint32 runner_id = 1;
}

message PGetAssignmentReply {
    core.PAssignment assignment = 1;
}