syntax = "proto3";

package cr8r.for_runner;

import "for_runner/hello.proto";
import "for_runner/ping.proto";
import "for_runner/register.proto";
import "for_runner/assignment/get.proto";
import "for_runner/event/add.proto";

service ForRunner {
    rpc Hello (PHelloRequest) returns (PHelloReply);
    rpc Ping (PPingRequest) returns (PPingReply);
    rpc Register (PRegisterRequest) returns (PRegisterReply);

    // Assignment-oriented methods
    rpc GetAssignment (PGetAssignmentRequest) returns (PGetAssignmentReply);

    // Event-oriented methods
    rpc AddEvent (PAddEventRequest) returns (PAddEventReply);
}